Adding core/src/main/java/org/opensearch/sql/{expression, executor, datasource, data, analysis}